add webpacker and remove volumes from docker compose

--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -9,7 +9,6 @@ services:
     container_name: forem_rails
     ports:
       - "3000:3000"
-      - "43447:43447"
     depends_on:
       - bundle
       - db
@@ -42,8 +41,6 @@ services:
       KNAPSACK_PRO_CI_NODE_TOTAL: 3
       KNAPSACK_PRO_TEST_FILE_PATTERN: "spec/system/user_uses_the_editor_spec.rb"
       COVERAGE_REPORTS_TOTAL: 4
-    volumes:
-      - .:/opt/apps/forem:delegated
     entrypoint: ["dockerize", "-wait", "tcp://db:5432", "-wait", "http://elasticsearch:9200", "-wait", "tcp://redis:6379", "-timeout", "2700s", "./scripts/entrypoint-dev.sh"]
 
   bundle:
@@ -51,19 +48,28 @@ services:
     container_name: forem_bundle
     environment:
       RAILS_ENV: test
-    volumes:
-      - .:/opt/apps/forem:delegated
     entrypoint: ["bash"]
     command: ["./scripts/bundle.sh"]
+
+  webpacker:
+    image: forem-test:latest
+    container_name: forem_webpacker
+    depends_on:
+      - rails
+      - yarn
+    environment:
+      RAILS_ENV: test
+      REDIS_SIDEKIQ_URL: redis://redis:6379
+      DATABASE_URL: postgresql://forem:forem@db:5432/PracticalDeveloper_test
+      ELASTICSEARCH_URL: http://elasticsearch:9200
+    entrypoint: ["dockerize", "-wait", "file:///opt/apps/forem/node_modules/.bin/webpack-dev-server", "-timeout", "2700s"]
+    command: ["./bin/webpack-dev-server"]
 
   yarn:
     image: forem-test:latest
     container_name: forem_yarn
     environment:
       RAILS_ENV: test
-    entrypoint: ["bash", "-c"]
-    volumes:
-      - .:/opt/apps/forem:delegated
     entrypoint: ["bash", "-c"]
     command: ["yarn install --dev"]
 
