--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,6 @@ addons:
   chrome: 'stable'
   artifacts:
     paths:
-      - $(ls tmp/screenshots/*.png | tr "\n" ":")
       - $(ls tmp/csvs/*.csv | tr "\n" ":")
     debug: true
 services:
@@ -21,6 +20,7 @@ env:
     - RAILS_ENV=test
     - CC_TEST_REPORTER_ID=f39e060a8b1a558ebd8aff75d5b9760bf1ae98f3f85d628ae28814f3c66438cd
     - DATABASE_URL=postgres://postgres@localhost/
+    - RAILS_SYSTEM_TESTING_SCREENSHOT=inline
     # Dummy values needed to verify the app boots via "rails runner"
     - APP_PROTOCOL=http://
     - APP_DOMAIN=localhost:3000
